// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageButton renders correctly 1`] = `
<img
  alt="alt-text"
  className="css-class-name"
  onClick={[Function]}
  role="button"
  src="test.png"
/>
`;

exports[`ImageButton renders correctly 2`] = `
<img
  alt="alt-text"
  className="css-class-name"
  onClick={undefined}
  role={undefined}
  src="test.png"
/>
`;
